--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
    <header class="header">
-       <p>Ganhe R$ 10,00 de desconto no frete</p>
+       <p>Ganhe R$ 10,00 de desconto no frete !</p>
        <h1>JordanShoes</h1>
    </header>
    <section class="intro">
